src/test/error/form.lns
{
   fn func( test1:form ) {
      test1( nil );
   }

   func( fn (val:int) { // error
      print( val + 1 );
   } );
   func( fn (val:int!) {
      print( unwrap val + 1 );
   } );
   func( fn (val:int!, val2:int) { // error
      print( unwrap val + 1 );
   } );
   func( fn (...) {
      print( ... );
   } );
}

